2008-07-28  Matthias Clasen  <mclasen@redhat.com>

	* monitor/proxy/gvfsproxyvolumemonitordaemon.c (append_mount):
	Don't pass a NULL uuid to dbus_message_iter_append_basic. Fixes
	a crash with bind mounts.

2008-07-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 545068 – use standard icon names

	* daemon/gvfsbackendburn.c:
	* daemon/gvfsbackendcomputer.c:
	* daemon/gvfsbackenddnssd.c: Use standard icon names.

2008-07-28  Matthias Clasen  <mclasen@redhat.com>

	* configure.ac: Bump GLib requirement to 2.17.5 (for GEmblemedIcon)
	* gproxyvolumemonitor.c: Handle GEmblemedIcon in deserialization code.
	* gvfsproxyvolumemonitordaemon.c: Handle GEmblemedIcon in 
	serialization code.

2008-07-23  Hans Petter Jansson  <hpj@novell.com>

	* configure.ac: Post-release bump to 0.99.4.

=== gvfs 0.99.3 ===

2008-07-23  Hans Petter Jansson  <hpj@novell.com>

	* NEWS: 0.99.3 update.

2008-07-23  David Zeuthen  <davidz@redhat.com>

	* monitor/proxy/gproxyvolumemonitor.c
	(g_proxy_volume_monitor_finalize): Fix crasher (#544399)

2008-07-22  Matthias Clasen  <mclasen@redhat.com>

	* configure.ac: Post-release bump

=== gvfs 0.99.2 ===

2008-07-22  Matthias Clasen  <mclasen@redhat.com>

	* Makefile.am: Fix up intltool mess
	* configure.ac: Bump glib requirement to 2.17.4
	* NEWS: Updates

2008-07-21  David Zeuthen  <davidz@redhat.com>

	* monitor/gphoto2/ggphoto2volume.c (do_update_from_hal_for_camera):
	* daemon/gvfsbackendgphoto2.c (compute_icon_name):
	(find_udi_for_device):
	Use 'camera-photo' rather than just 'camera' since gnome-icon-theme
	in 2.23/2.24 no longer ships 'camera'. Now the icons look fine again.

2008-07-21  David Zeuthen  <davidz@redhat.com>

	* configure.ac:
	* monitor/Makefile.am:
	* monitor/hal/*:
	* monitor/gphoto2/*:
	Separate the hal and gphoto2 volume monitors - this is in part
	needed to solve bug #520123.

2008-07-21  David Zeuthen  <davidz@redhat.com>

	* monitor/proxy/gproxyvolumemonitor.c