@@ -63,8 +63,6 @@
 
 #define CACHE_LIFESPAN 3
 
-#define _I18N_LATER(x) x
-
 struct _GVfsBackendObexftp
 {
   GVfsBackend parent_instance;
@@ -698,7 +696,7 @@ do_mount (GVfsBackend *backend,
 
       g_vfs_job_failed (G_VFS_JOB (job),
                         G_IO_ERROR, G_IO_ERROR_BUSY,
-                        _I18N_LATER("Connection to the device lost"));
+                        _("Connection to the device lost"));
       return;
     }
 
@@ -1193,7 +1191,7 @@ do_enumerate (GVfsBackend *backend,
         {
           g_vfs_job_failed (G_VFS_JOB (job), G_IO_ERROR,
                             G_IO_ERROR_NOT_SUPPORTED,
-                            _I18N_LATER("Device requires a software update"));
+                            _("Device requires a software update"));
         }
       else
         {
